# ArticleOpsStudio

./: ArticleOpsStudio.spec  LICENSE  README.md  pyproject.toml  start.bat
articleops-runtime/backups/: articleops-20260602-103040-813210-before-delete.sqlite  articleops-20260602-103042-775624-before-delete.sqlite  articleops-20260602-103044-930772-before-delete.sqlite  articleops-20260602-103047-110685-before-delete.sqlite  articleops-20260602-103048-417481-before-delete.sqlite  articleops-20260602-103049-893496-before-delete.sqlite  articleops-20260602-103051-131396-before-update.sqlite  articleops-20260603-122954-824390-before-reset.sqlite
articleops-runtime/data/: articleops.sqlite
docs/: API.md  DATABASE.md  GITHUB.md  RUNTIME.md  TEMPLATE.md  UI.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: app-utils.js  main.jsx  styles.css
packaging/: articleops_entry.py  generate_windows_icon.py  windows_version_info.txt
src/articleops_studio/: __init__.py  api.py  database.py  database_admin.py  docs_reader.py  main.py  models.py  runtime.py  scheduler.py  templates.py
tests/: conftest.py  test_api.py  test_core.py  test_database.py  test_database_admin.py  test_runtime.py
