[project]
name = "articleops-studio"
version = "0.1.0"
description = "Local OpenClaw scheduled article task template generator and usage tracker."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.8,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.scripts]
articleops = "articleops_studio.main:run"

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",
    "pyinstaller>=6.20.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
